--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,24 @@
             android:name=".ui.LoginActivity"
             android:exported="false" />
         <activity
+            android:name=".ui.AdminActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.AdminDashboardActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.ViewUsersActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.AddUserActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.UpdateUserActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.DeleteUserActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
